--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+## jpa
+server.port=8081
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
+# datasource
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:karatedopi
+spring.datasource.username=sa
+spring.datasource.password=
+
+# h2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
