--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## jpa
 server.port=8081
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 
 # datasource
@@ -13,3 +13,7 @@ spring.datasource.password=
 # h2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+# jwt
+jwt.secret=sharingan
+jwt.expiration=86400000
