backend-java-release-0.0.1: Removing the security for some time and other changes
Remotion of security, just for some time
Remotion of unnecessary initialization of variable
Adding lastUpdate field
Fixing field name on StateAbbreviation
Fixing return of profiles
Including name of application on properties
Adding a CorsFilter

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,4 +1,7 @@
 spring:
+  name: karatedopi
+  allowed:
+    origins: localhost:8080,localhost:4200,localhost:3000
   datasource:
     url: jdbc:postgresql://localhost:5432/dbkaratedopi
     username: jonataslaet
