--- a/backend-java/src/main/resources/application.properties
+++ b/backend-java/src/main/resources/application.properties
@@ -2,10 +2,6 @@
 spring.profiles.active=${APP_PROFILE:dev}
 spring.jpa.open-in-view=false
 
-security.client-id=${CLIENT_ID:myclientid}
-security.client-secret=${CLIENT_SECRET:myclientsecret}
+security.jwt.secret=${JWT_SECRET:86400}
 security.jwt.duration=${JWT_DURATION:86400}
 cors.origins=${CORS_ORIGINS:http://localhost:3000,http://localhost:5173,http://localhost:8080,http://localhost:4200,localhost:8080}
-
-email.password-recover.token.minutes=${PASSWORD_RECOVER_TOKEN_MINUTES:30}
-email.password-recover.uri=${PASSWORD_RECOVER_URI:http://localhost:5173/new-password/}
