--- a/backend-java/src/main/resources/application.properties
+++ b/backend-java/src/main/resources/application.properties
@@ -2,6 +2,6 @@
 spring.profiles.active=${APP_PROFILE:dev}
 spring.jpa.open-in-view=false
 
-security.jwt.secret=${JWT_SECRET:86400}
-security.jwt.duration=${JWT_DURATION:86400}
+security.jwt.secret=${JWT_SECRET:jwt-secret}
+security.jwt.duration=${JWT_DURATION:600000}
 cors.origins=${CORS_ORIGINS:http://localhost:3000,http://localhost:5173,http://localhost:8080,http://localhost:4200,localhost:8080}
