--- a/frontend-angular/package.json
+++ b/frontend-angular/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^16.2.12",
     "@angular/platform-browser-dynamic": "^16.2.12",
     "@angular/router": "^16.2.12",
+    "@auth0/angular-jwt": "^5.2.0",
     "jwt-decode": "^4.0.0",
     "ngx-mask": "^15.1.2",
     "rxjs": "~7.8.0",
