--- a/backend-java/src/main/resources/application.properties
+++ b/backend-java/src/main/resources/application.properties
@@ -5,3 +5,10 @@ spring.jpa.open-in-view=false
 security.jwt.secret=${JWT_SECRET:jwt-secret}
 security.jwt.duration=${JWT_DURATION:600000}
 cors.origins=${CORS_ORIGINS:http://localhost:3000,http://localhost:5173,http://localhost:8080,http://localhost:4200,localhost:8080}
+
+spring.mail.host=${EMAIL_HOST:smtp.gmail.com}
+spring.mail.port=${EMAIL_PORT:587}
+spring.mail.username=${EMAIL_USERNAME}
+spring.mail.password=${EMAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
