--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -13,10 +13,10 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Login to Docker Hub
-        uses: docker/login-action@v2.0.0
+        uses: docker/login-action@v3
         with: 
           username: {{ secrets.DOCKER_USERNAME }}
-          password: {{ secrets.DOCKER_PASSWORD }}
+          password: {{ secrets.DOCKER_TOKEN }}
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
