0030: Fixed ci file content
Put pipe on the last step command

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -35,6 +35,6 @@ jobs:
 
       - name: Push to Docker Hub Container Registry
         working-directory: ./backend-java
-        run: 
+        run: |
           docker tag {{ secrets.DOCKER_USERNAME }}/karatedopi:latest {{ secrets.DOCKER_USERNAME }}/karatedopi:${{ github.run_id }}
           docker push {{ secrets.DOCKER_USERNAME }}/karatedopi:{{ github.run_id }}
