--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -15,8 +15,8 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with: 
-          username: {{ secrets.DOCKER_USERNAME }}
-          password: {{ secrets.DOCKER_TOKEN }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
@@ -36,5 +36,5 @@ jobs:
       - name: Push to Docker Hub Container Registry
         working-directory: ./backend-java
         run: |
-          docker tag {{ secrets.DOCKER_USERNAME }}/karatedopi:latest {{ secrets.DOCKER_USERNAME }}/karatedopi:${{ github.run_id }}
-          docker push {{ secrets.DOCKER_USERNAME }}/karatedopi:{{ github.run_id }}
+          docker tag ${{ secrets.DOCKER_USERNAME }}/karatedopi:latest ${{ secrets.DOCKER_USERNAME }}/karatedopi:${{ github.run_id }}
+          docker push ${{ secrets.DOCKER_USERNAME }}/karatedopi:${{ github.run_id }}
