--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,25 +4,29 @@ services:
   # KARATEDOPI SERVER 
   # docker run -p 8080:8080 --name karatedopi-container-dev -e APP_PROFILE=dev -e DB_URL=jdbc:postgresql://postgres-server:5432/dbkaratedopi -e DB_USERNAME=jonataslaet -e DB_PASSWORD=blendo273 jonataslaet/karatedopi
   # ====================================================================================================================
-  # karatedopi-container-dev:
-  #   image: jonataslaet/karatedopi
-  #   mem_limit: 500m
-  #   ports:
-  #     - '8080:8080'
-  #   networks:
-  #     - dev-network
-  #   depends_on:
-  #     - postgres-server
-  #   environment:
-  #     - APP_PROFILE=dev
-  #     - DB_URL=jdbc:postgresql://postgres-server:5432/dbkaratedopi
-  #     - DB_USERNAME=jonataslaet
-  #     - DB_PASSWORD=blendo273
+  karatedopi-container-dev:
+    image: jonataslaet/karatedopi
+    restart: always
+    build: ./backend-java
+    working_dir: /backend-java
+    mem_limit: 500m
+    ports:
+      - '8080:8080'
+    networks:
+      - dev-network
+    depends_on:
+      - postgres-server
+    environment:
+      - APP_PROFILE=dev
+      - DB_URL=jdbc:postgresql://postgres-server:5432/dbkaratedopi
+      - DB_USERNAME=jonataslaet
+      - DB_PASSWORD=blendo273
   # ====================================================================================================================
   # POSTGRES SERVER
   # ====================================================================================================================
   postgres-server:
     image: postgres
+    restart: always
     environment:
       - POSTGRES_USER=jonataslaet
       - POSTGRES_PASSWORD=blendo273
