--- a/backend-java/Dockerfile
+++ b/backend-java/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk:17
+FROM eclipse-temurin:17-jdk-jammy
 VOLUME /tmp
 EXPOSE 8080
 ADD ./target/karatedopi-0.0.3-SNAPSHOT.jar karatedopi.jar
