--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -11,6 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Checkout Repository
     - uses: actions/checkout@v3
 
     - name: Login to Docker Hub
@@ -28,7 +29,7 @@ jobs:
         
     - name: Build with Maven
       working-directory: ./backend-java
-      run: mvn -B package --file pom.xml
+      run: mvn -B clean package
 
     - name: Build and push Docker images
       uses: docker/build-push-action@v5.1.0
