--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 version: '3.8'
+
 services:
   postgres-server:
     image: postgres
@@ -11,17 +12,13 @@ services:
       - '5432:5432'
     networks:
       - karatedopi-network
-  karatedopi-container-dev:
-    image: jonataslaet/karatedopi
+
+  karatedopi-backend:
+    build:
+      context: ./backend-java
     restart: always
-    build: ./backend-java
-    working_dir: /backend-java
-    mem_limit: 500m
     ports:
-      - '80:8080'
-    networks:
-      - karatedopi-network
-    command: mvn spring-boot:run
+      - '8080:8080'
     depends_on:
       - postgres-server
     environment:
@@ -29,6 +26,9 @@ services:
       - SPRING.DATASOURCE.URL=jdbc:postgresql://postgres-server:5432/dbkaratedopi
       - SPRING.DATASOURCE.USERNAME=jonataslaet
       - SPRING.DATASOURCE.PASSWORD=blendo273
+    networks:
+      - karatedopi-network
+
 networks:
   karatedopi-network:
     driver: bridge
