--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -2,7 +2,7 @@ name: Continuous Integration with Github Actions
 
 on:
   push:
-    branches: 
+    branches:
       - '*'
 
 jobs:
@@ -15,23 +15,25 @@ jobs:
 
     - name: Login to Docker Hub
       uses: docker/login-action@v3
-      with: 
+      with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_TOKEN }}
-    
+
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-        
+
     - name: Build with Maven
       working-directory: ./backend-java
-      run: mvn -B clean package
+      run: mvn -B clean package -DskipTests
 
     - name: Build and push Docker images
-      uses: docker/build-push-action@v5.1.0
-      with:
-        context: ./backend-java
-        push: true
+      working-directory: ./backend-java
+      run: |
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/karatedopi:latest .
+        docker tag ${{ secrets.DOCKER_USERNAME }}/karatedopi:latest ${{ secrets.DOCKER_USERNAME }}/karatedopi:${{ github.sha }}
+        docker push ${{ secrets.DOCKER_USERNAME }}/karatedopi:${{ github.sha }}
+        docker push ${{ secrets.DOCKER_USERNAME }}/karatedopi:latest
