0031: Setting up environment for tests
Removed h2 database
Removed sensitive values from application properties
Test environment now have the same SGBD as dev and prod environments

--- a/backend-java/src/main/resources/application.properties
+++ b/backend-java/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 # JPA
-spring.profiles.active=${APP_PROFILE:dev}
+spring.profiles.active=${APP_PROFILE}
 spring.jpa.open-in-view=false
 
-security.jwt.secret=${JWT_SECRET:jwt-secret}
-security.jwt.duration=${JWT_DURATION:600000}
+security.jwt.secret=${JWT_SECRET}
+security.jwt.duration=${JWT_DURATION}
 cors.origins=${CORS_ORIGINS:http://localhost:3000,http://localhost:5173,http://localhost:8080,http://localhost:4200,localhost:8080}
 
 spring.mail.host=${EMAIL_HOST:smtp.gmail.com}
