--- a/backend-java/src/main/resources/application-dev.properties
+++ b/backend-java/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/dbkaratedopi}
-spring.datasource.username=${DB_USERNAME:jonataslaet}
-spring.datasource.password=${DB_PASSWORD:blendo273}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
