--- a/backend-java/src/main/resources/application-test.properties
+++ b/backend-java/src/main/resources/application-test.properties
@@ -1,14 +1,7 @@
-# Datasource
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/dbtestkaratedopi}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
-# H2 Client
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-# JPA
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.hibernate.ddl-auto=create-drop
