0031: Created container for tests
Also included some adjustments on app properties

--- a/backend-java/src/main/resources/application.properties
+++ b/backend-java/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 # JPA
-spring.profiles.active=${APP_PROFILE}
+spring.profiles.active=${APP_PROFILE:seu-perfil-disponivel-de-app-properties}
 spring.jpa.open-in-view=false
 
-security.jwt.secret=${JWT_SECRET}
-security.jwt.duration=${JWT_DURATION}
+security.jwt.secret=${JWT_SECRET:seu-secret-jwt}
+security.jwt.duration=${JWT_DURATION:600000}
 cors.origins=${CORS_ORIGINS:http://localhost:3000,http://localhost:5173,http://localhost:8080,http://localhost:4200,localhost:8080}
 
 spring.mail.host=${EMAIL_HOST:smtp.gmail.com}
 spring.mail.port=${EMAIL_PORT:587}
-spring.mail.username=${EMAIL_USERNAME}
-spring.mail.password=${EMAIL_PASSWORD}
+spring.mail.username=${EMAIL_USERNAME:seugmail@gmail.com}
+spring.mail.password=${EMAIL_PASSWORD:sua-senha-de-app-no-gmail}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
