0040: : Created endpoint to upload profile image

--- a/backend-java/src/main/resources/application.properties
+++ b/backend-java/src/main/resources/application.properties
@@ -16,3 +16,8 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 email.password-recover.token.minutes=${PASSWORD_RECOVER_TOKEN_MINUTES:30}
+
+aws.access_key.id=${AWS_ACCESS_KEY_ID:your-access-key-id}
+aws.secret_access_key=${AWS_SECRET_ACCESS_KEY:your-secret-access-key}
+s3.bucket=${S3_BUCKET:your-bucket}
+s3.region=${S3_REGION:your-region}
