--- a/backend-java/src/main/resources/application-dev.properties
+++ b/backend-java/src/main/resources/application-dev.properties
@@ -7,6 +7,8 @@ spring.datasource.password=${DB_PASSWORD}
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
 
 security.jwt.secret=${JWT_SECRET:seu-secret-jwt}
 security.jwt.duration=${JWT_DURATION:2400000}
